--- a/StormWeb/Views/Document/EditCaseTemp.cshtml
+++ b/StormWeb/Views/Document/EditCaseTemp.cshtml
@@ -84,7 +84,7 @@
         </div>
 
         <p>
-            <input type="submit" value="Save" id="save" onclick='parent.location.reload()'/>
+            <input type="submit" value="Save" id="save"/>
         </p>
     </fieldset>
 }
