--- a/StormWeb/Views/Shared/_Layout.cshtml
+++ b/StormWeb/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
 
 </head>
 <body>
-    <div id="notificationCenterBox">        
+    <div id="notificationCenterBox" style="display:none">        
         <div style='text-align:center'><div class='btn btn-error' id='notificationClose'>x Close</div></div>
         
     </div>
